# Venture

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  compile_shaders.py  cpp.hint
scripts/: pre_build.py
shaders/: shader.frag  shader.vert
src/: Api.h  CMakeLists.txt  Engine.cpp  Engine.hpp  HEngine.c  HEngine.h  HLog.h  HMath.h  HRenderer.c  HRenderer.h  HResult.h  HWindow.c  HWindow.h  main.c  main.cpp
src/error_handling/: Assert.hpp  Check.hpp  Log.hpp  Result.hpp
src/hal/: IRenderer.hpp  IWindow.hpp  Renderer.hpp  Window.hpp
src/hal/vulkan/: Debug.cpp  Debug.hpp  QueueFamilyInfo.cpp  QueueFamilyInfo.hpp  QueueFamilyTracker.cpp  QueueFamilyTracker.hpp  SwapChainInfo.cpp  SwapChainInfo.hpp  SwapchainImage.cpp  SwapchainImage.hpp  SwapchainInfo.cpp  SwapchainInfo.hpp  VulkanApi.hpp  VulkanRenderer.c  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRenderer.hpp  VulkanWindow.c  VulkanWindow.cpp  VulkanWindow.h  VulkanWindow.hpp  Window.cpp  Window.hpp
